<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_pengenalan"
    android:id="@+id/pengenalan">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/image_pengenalan"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pengenalan1"
        android:textColor="#212121"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="10dp"
        android:layout_below="@+id/image_pengenalan"
        android:id="@+id/pengenalan1"/>
    <TextView
        android:id="@+id/pengenalan2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pengenalan2"
        android:textColor="#757575"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="10dp"
        android:layout_below="@+id/pengenalan1"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pengenalan3"
        android:textColor="#212121"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="10dp"
        android:layout_below="@+id/pengenalan2"/>


</RelativeLayout>