<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_about_us"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.wahyuridiansyah.abrakadabra.about_us">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/team_teaching"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_horizontal"
        android:layout_margin="10dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/foto1_about"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="start"
            android:layout_marginRight="10dp" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/foto2_about"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="10dp"
            android:layout_toRightOf="@+id/foto1_about" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/foto3_about"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="end"
            android:layout_toRightOf="@+id/foto2_about"
            android:adjustViewBounds="false" />
    </RelativeLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/foto4_about"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:adjustViewBounds="false" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lead_programmer"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"/>
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/foto5_about"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:adjustViewBounds="false" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/designer"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"/>


</LinearLayout>
